# packbed

./: README.md
.github/workflows/: ci.yml
packbed/: Cargo.toml
packbed/src/: lib.rs  main.rs  record.rs
py-packbed/: Cargo.toml  pyproject.toml
py-packbed/src/: lib.rs
