[package]
name = "packbed"
version = "0.0.13"
edition = "2021"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
license = "MIT"
description = "pack a .bed into overlapping components"
keywords = ["components", "overlap", "transcript", "bed"]
readme = "../README.md"
homepage = "https://github.com/alejandrogzi/packbed"
repository = "https://github.com/alejandrogzi/packbed"
categories = ["command-line-utilities", "science"]

[dependencies]
dashmap = { version = "6", features = ["rayon"], optional = true }
clap = { version = "4.0", features = ["derive"] }
rayon = "1.8.1"
num_cpus = "1.16.0"
genepred = { version = "0.0.11", features = ["rayon", "mmap"] }
log = "0.4"
simple_logger = "5.2.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[features]
default = ["hashmap"]
hashmap = []
dashmap = ["dep:dashmap"]

[lib]
name = "packbed"
path = "src/lib.rs"
